Was forgetting to return results - mikes code relies to test correctness. should work now

--- a/ceph_data_transfer-directory_store-new_ncar_dataset_TODO.ipynb
+++ b/ceph_data_transfer-directory_store-new_ncar_dataset_TODO.ipynb
@@ -6,11 +6,11 @@
    "id": "0ce2a96b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-02T18:48:03.335479Z",
-     "iopub.status.busy": "2024-12-02T18:48:03.333504Z",
-     "iopub.status.idle": "2024-12-02T18:48:03.360372Z",
-     "shell.execute_reply": "2024-12-02T18:48:03.357563Z",
-     "shell.execute_reply.started": "2024-12-02T18:48:03.335326Z"
+     "iopub.execute_input": "2024-12-07T03:45:40.355864Z",
+     "iopub.status.busy": "2024-12-07T03:45:40.355227Z",
+     "iopub.status.idle": "2024-12-07T03:45:40.389884Z",
+     "shell.execute_reply": "2024-12-07T03:45:40.387581Z",
+     "shell.execute_reply.started": "2024-12-07T03:45:40.355737Z"
     },
     "tags": []
    },
@@ -33,11 +33,11 @@
    "id": "5915ec1e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-02T18:48:03.491116Z",
-     "iopub.status.busy": "2024-12-02T18:48:03.490209Z",
-     "iopub.status.idle": "2024-12-02T18:48:03.501724Z",
-     "shell.execute_reply": "2024-12-02T18:48:03.499594Z",
-     "shell.execute_reply.started": "2024-12-02T18:48:03.491043Z"
+     "iopub.execute_input": "2024-12-07T03:45:40.394838Z",
+     "iopub.status.busy": "2024-12-07T03:45:40.394279Z",
+     "iopub.status.idle": "2024-12-07T03:45:40.404545Z",
+     "shell.execute_reply": "2024-12-07T03:45:40.402571Z",
+     "shell.execute_reply.started": "2024-12-07T03:45:40.394786Z"
     },
     "tags": []
    },
@@ -59,11 +59,11 @@
    "id": "121c5ce8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-02T18:48:04.578318Z",
-     "iopub.status.busy": "2024-12-02T18:48:04.577542Z",
-     "iopub.status.idle": "2024-12-02T18:48:05.284387Z",
-     "shell.execute_reply": "2024-12-02T18:48:05.281894Z",
-     "shell.execute_reply.started": "2024-12-02T18:48:04.578261Z"
+     "iopub.execute_input": "2024-12-07T03:45:40.406997Z",
+     "iopub.status.busy": "2024-12-07T03:45:40.406457Z",
+     "iopub.status.idle": "2024-12-07T03:45:40.889169Z",
+     "shell.execute_reply": "2024-12-07T03:45:40.886593Z",
+     "shell.execute_reply.started": "2024-12-07T03:45:40.406947Z"
     },
     "tags": []
    },
@@ -89,11 +89,11 @@
    "id": "5ac46e68-bb3c-4b1b-a0e2-96b6dcd0c25c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-02T18:48:24.600416Z",
-     "iopub.status.busy": "2024-12-02T18:48:24.598978Z",
-     "iopub.status.idle": "2024-12-02T18:48:24.614521Z",
-     "shell.execute_reply": "2024-12-02T18:48:24.611490Z",
-     "shell.execute_reply.started": "2024-12-02T18:48:24.600340Z"
+     "iopub.execute_input": "2024-12-07T03:45:40.892609Z",
+     "iopub.status.busy": "2024-12-07T03:45:40.891759Z",
+     "iopub.status.idle": "2024-12-07T03:45:40.904142Z",
+     "shell.execute_reply": "2024-12-07T03:45:40.901238Z",
+     "shell.execute_reply.started": "2024-12-07T03:45:40.892552Z"
     },
     "tags": []
    },
@@ -120,11 +120,11 @@
    "id": "66cf3164-8b96-4a08-9274-38f9f4e97c25",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-02T18:48:38.802332Z",
-     "iopub.status.busy": "2024-12-02T18:48:38.801232Z",
-     "iopub.status.idle": "2024-12-02T18:48:38.814021Z",
-     "shell.execute_reply": "2024-12-02T18:48:38.811366Z",
-     "shell.execute_reply.started": "2024-12-02T18:48:38.802257Z"
+     "iopub.execute_input": "2024-12-07T03:45:40.907315Z",
+     "iopub.status.busy": "2024-12-07T03:45:40.906733Z",
+     "iopub.status.idle": "2024-12-07T03:45:40.916432Z",
+     "shell.execute_reply": "2024-12-07T03:45:40.914405Z",
+     "shell.execute_reply.started": "2024-12-07T03:45:40.907263Z"
     },
     "tags": []
    },
@@ -142,11 +142,11 @@
    "id": "bbeac63a-3f15-4860-972a-495253a457ca",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-02T18:49:04.304056Z",
-     "iopub.status.busy": "2024-12-02T18:49:04.303270Z",
-     "iopub.status.idle": "2024-12-02T18:49:04.319055Z",
-     "shell.execute_reply": "2024-12-02T18:49:04.316756Z",
-     "shell.execute_reply.started": "2024-12-02T18:49:04.304000Z"
+     "iopub.execute_input": "2024-12-07T03:45:40.919749Z",
+     "iopub.status.busy": "2024-12-07T03:45:40.919130Z",
+     "iopub.status.idle": "2024-12-07T03:45:40.931951Z",
+     "shell.execute_reply": "2024-12-07T03:45:40.929611Z",
+     "shell.execute_reply.started": "2024-12-07T03:45:40.919700Z"
     },
     "tags": []
    },
@@ -168,7 +168,8 @@
     "zarr_variables = list(zarr_groups.keys())\n",
     "num_variables = len(zarr_variables)\n",
     "# number of workers to read in parallel.\n",
-    "num_workers = 6\n",
+    "# Keep this under 4, this reads 50GB per worker per worker\n",
+    "num_workers = 4\n",
     "# maximum number of retries in case of an error.\n",
     "max_retries = 4\n",
     "# output path for writing the report text file.\n",
@@ -185,19 +186,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "1018e21f",
+   "execution_count": 13,
+   "id": "44d825bc-3916-4f37-bf0e-1a648dafaaf7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-19T15:38:44.338481Z",
-     "iopub.status.busy": "2024-11-19T15:38:44.337991Z",
-     "iopub.status.idle": "2024-11-19T15:38:44.346177Z",
-     "shell.execute_reply": "2024-11-19T15:38:44.344332Z",
-     "shell.execute_reply.started": "2024-11-19T15:38:44.338436Z"
+     "iopub.execute_input": "2024-12-07T03:46:03.634877Z",
+     "iopub.status.busy": "2024-12-07T03:46:03.633958Z",
+     "iopub.status.idle": "2024-12-07T03:46:03.908979Z",
+     "shell.execute_reply": "2024-12-07T03:46:03.905786Z",
+     "shell.execute_reply.started": "2024-12-07T03:46:03.634817Z"
     },
     "tags": []
    },
    "outputs": [],
+   "source": [
+    "!mv /home/idies/workspace/turbulence-ceph-staging/sciserver-turbulence/stsabl2048high /home/idies/workspace/turbulence-ceph-staging/sciserver-turbulence/stsabl2048high_OLD3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "1018e21f",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-12-07T03:46:05.187088Z",
+     "iopub.status.busy": "2024-12-07T03:46:05.186198Z",
+     "iopub.status.idle": "2024-12-07T03:46:06.712682Z",
+     "shell.execute_reply": "2024-12-07T03:46:06.710434Z",
+     "shell.execute_reply.started": "2024-12-07T03:46:05.187020Z"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Are you sure you want to overwrite everything? (y/n):  y\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "zarr store created.\n",
+      "-\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "create the zarr store\n",
@@ -237,15 +273,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "id": "a2b0e62f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-19T15:38:44.348022Z",
-     "iopub.status.busy": "2024-11-19T15:38:44.347481Z",
-     "iopub.status.idle": "2024-11-19T15:38:45.200342Z",
-     "shell.execute_reply": "2024-11-19T15:38:45.198116Z",
-     "shell.execute_reply.started": "2024-11-19T15:38:44.347978Z"
+     "iopub.execute_input": "2024-12-07T03:46:09.624761Z",
+     "iopub.status.busy": "2024-12-07T03:46:09.623908Z",
+     "iopub.status.idle": "2024-12-07T03:46:09.639427Z",
+     "shell.execute_reply": "2024-12-07T03:46:09.636580Z",
+     "shell.execute_reply.started": "2024-12-07T03:46:09.624703Z"
     },
     "tags": []
    },
@@ -277,15 +313,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "id": "10da7102-a14c-4fb1-9b3d-10e9250a9c09",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-19T15:38:45.202796Z",
-     "iopub.status.busy": "2024-11-19T15:38:45.202297Z",
-     "iopub.status.idle": "2024-11-19T15:38:49.032163Z",
-     "shell.execute_reply": "2024-11-19T15:38:49.030628Z",
-     "shell.execute_reply.started": "2024-11-19T15:38:45.202729Z"
+     "iopub.execute_input": "2024-12-07T03:46:09.805186Z",
+     "iopub.status.busy": "2024-12-07T03:46:09.804336Z",
+     "iopub.status.idle": "2024-12-07T03:46:09.815086Z",
+     "shell.execute_reply": "2024-12-07T03:46:09.812972Z",
+     "shell.execute_reply.started": "2024-12-07T03:46:09.805129Z"
     },
     "tags": []
    },
@@ -297,15 +333,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "id": "c3f961ab-cd78-4565-b66e-4f6fb5f09bf2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-19T15:38:49.035841Z",
-     "iopub.status.busy": "2024-11-19T15:38:49.034712Z",
-     "iopub.status.idle": "2024-11-19T15:38:49.047037Z",
-     "shell.execute_reply": "2024-11-19T15:38:49.045143Z",
-     "shell.execute_reply.started": "2024-11-19T15:38:49.035788Z"
+     "iopub.execute_input": "2024-12-07T03:46:10.166308Z",
+     "iopub.status.busy": "2024-12-07T03:46:10.165470Z",
+     "iopub.status.idle": "2024-12-07T03:46:10.180097Z",
+     "shell.execute_reply": "2024-12-07T03:46:10.177904Z",
+     "shell.execute_reply.started": "2024-12-07T03:46:10.166250Z"
     },
     "tags": []
    },
@@ -334,8 +370,8 @@
    "id": "dcade330",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-19T15:38:49.049874Z",
-     "iopub.status.busy": "2024-11-19T15:38:49.049357Z"
+     "iopub.execute_input": "2024-12-07T03:46:11.310677Z",
+     "iopub.status.busy": "2024-12-07T03:46:11.309809Z"
     },
     "tags": []
    },
@@ -343,7 +379,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4561ffdbed5a4b7f8488289f71dacfb4",
+       "model_id": "245a3f629d664f7e93562f561c70540b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -357,7 +393,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8b7059b6e09b499e93fdc6813956ba5f",
+       "model_id": "47e4dfb1aa9b489ea06f8ac59b4f8969",
        "version_major": 2,
        "version_minor": 0
       },
@@ -367,13 +403,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "successfully consolidated data for time = 5                                                         "
-     ]
     }
    ],
    "source": [
@@ -483,15 +512,16 @@
     "        with ThreadPoolExecutor(num_variables) as p:\n",
     "            list(p.map(save_store, variable_data, zarr_variables))\n",
     "            \n",
-    "        # TODO Ariel Disable verification in favor of manual verification\n",
-    "        # # Verify that the copies are not corrupt.\n",
-    "        # with ThreadPoolExecutor(num_variables) as p:\n",
-    "        #     verified = list(p.map(verify_copy, variable_data, zarr_variables))\n",
     "\n",
-    "        # if any([message == \"corrupt copy\" for message in verified]) or len(verified) != num_variables:\n",
-    "        #     return f\"error processing cube at {coords}: verification failed\"\n",
-    "        # else:\n",
-    "        #     return f\"successfully processed cube at {coords}\"\n",
+    "        # Verify that the copies are not corrupt.\n",
+    "        with ThreadPoolExecutor(num_variables) as p:\n",
+    "            verified = list(p.map(verify_copy, variable_data, zarr_variables))\n",
+    "        if any([message == \"corrupt copy\" for message in verified]) or len(verified) != num_variables:\n",
+    "            return f\"error processing cube at {coords}: verification failed\"\n",
+    "        else:\n",
+    "            return f\"successfully processed cube at {coords}\"\n",
+    "\n",
+    "\n",
     "    except Exception as e:\n",
     "        tb = traceback.format_exc()\n",
     "        raise Exception(f\"error processing cube at {coords}: {type(e).__name__}, {e}\\n{tb}\")\n",
@@ -530,13 +560,13 @@
     "                        for result in executor.map(process_cube, cube_coords_time):\n",
     "                            results.append(result)\n",
     "                            current_time_pbar.update(1)\n",
-    "                            \n",
+    "\n",
     "                            if \"error processing cube\" in result:\n",
     "                                break\n",
-    "                    \n",
+    "\n",
     "                    # Reset the chunk progress bar.\n",
     "                    current_time_pbar.reset()\n",
-    "                    \n",
+    "\n",
     "                    print('\\r' + ' ' * 100 + '\\r', end='', flush=True)\n",
     "                    if any([\"error processing cube\" in message for message in results]) or results == []:\n",
     "                        if retries > max_retries:\n",
@@ -583,6 +613,12 @@
    "execution_count": null,
    "id": "1393d43c-e144-4a4a-ad94-ccb0d28e05e7",
    "metadata": {
+    "execution": {
+     "iopub.status.busy": "2024-12-07T03:45:59.901638Z",
+     "iopub.status.idle": "2024-12-07T03:45:59.902972Z",
+     "shell.execute_reply": "2024-12-07T03:45:59.902302Z",
+     "shell.execute_reply.started": "2024-12-07T03:45:59.902231Z"
+    },
     "tags": []
    },
    "outputs": [],
@@ -650,16 +686,6 @@
     "#     # data_array = dataset[zarr_variable].values\n",
     "#     # data_array = np.expand_dims(data_array, axis=0)  # Adds time dimension at axis 0\n",
     "#     # variable_data.append(data_array)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1042f6a4-bd6e-4e7c-b35d-77e5fe7743a4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "variable_data"
    ]
   },
   {
