--- a/ceph_data_transfer-directory_store-new_ncar_dataset_TODO.ipynb
+++ b/ceph_data_transfer-directory_store-new_ncar_dataset_TODO.ipynb
@@ -1,6 +1,32 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "bd37d0eb",
+   "metadata": {},
+   "source": [
+    "### This notebook is currently in append mode, starting from t:\n",
+    "\n",
+    "This is because the write failed after 26, so I will rewrite 26-105, saving ~5 days in the process\n",
+    "\n",
+    "Changes:\n",
+    "\n",
+    "1. Skip creating new zarr store\n",
+    "\n",
+    "2. Change timestep iteration in the last cell"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ff9a861",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t_start = 26"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "0ce2a96b",
@@ -307,10 +333,10 @@
     "            return response == 'y'  # Returns True for 'y', False for 'n'\n",
     "        print(\"Invalid input. Please enter 'y' or 'n'.\")\n",
     "\n",
-    "if confirm_overwrite():\n",
-    "    create_zarr_store(store, xyzt_dims_full, xyzt_chunk_sizes, zarr_groups)\n",
-    "else:\n",
-    "    print(\"Operation canceled.\")"
+    "# if confirm_overwrite():\n",
+    "#     create_zarr_store(store, xyzt_dims_full, xyzt_chunk_sizes, zarr_groups)\n",
+    "# else:\n",
+    "#     print(\"Operation canceled.\")"
    ]
   },
   {
@@ -535,7 +561,8 @@
     "\n",
     "with open(os.path.join(output_path, f\"{dataset_title}_report-success.txt\"), \"w\") as f_success:\n",
     "    with open(os.path.join(output_path, f\"{dataset_title}_report-error.txt\"), \"w\") as f_error:\n",
-    "        for time in tqdm(range(xyzt_dims[-1]), total=xyzt_dims[-1], desc=\"time\"):\n",
+    "        for time in tqdm(range(t_start, xyzt_dims[-1]), # TODO Ariel changed to start from >0 timestep\n",
+    "                 total=xyzt_dims[-1] - t_start, desc=\"time\"):\n",
     "            correct_flag = False\n",
     "            retries = 0\n",
     "            while not correct_flag and retries <= max_retries:\n",
@@ -610,80 +637,6 @@
     "!rm -rf /home/idies/workspace/turbulence-ceph-staging/sciserver-turbulence/stsabl2048high_OLD2\n",
     "!rm -rf /home/idies/workspace/turbulence-ceph-staging/sciserver-turbulence/stsabl2048high_OLD3\n",
     "!rm -rf /home/idies/workspace/turbulence-ceph-staging/sciserver-turbulence/stsabl2048high_OLD4"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1393d43c-e144-4a4a-ad94-ccb0d28e05e7",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# import dask\n",
-    "\n",
-    "# timestep = 0\n",
-    "\n",
-    "# data_xr = xr.open_dataset(select_file(NCAR_JHF_LR_PATH, timestep),\n",
-    "#                                   chunks={'nnz': xyzt_filedb_file_dims[2],\n",
-    "#                                           'nny': xyzt_filedb_file_dims[1],\n",
-    "#                                           'nnx': xyzt_filedb_file_dims[0]})\n",
-    "\n",
-    "# assert isinstance(data_xr['e'].data, dask.array.core.Array)\n",
-    "\n",
-    "#         # Unpack cube coordinates\n",
-    "# # i, j, k = coords[:3]  # i: X-index, j: Y-index, k: Z-index\n",
-    "\n",
-    "# # Chunk sizes for each dimension\n",
-    "# chunk_sizes = {\n",
-    "#     'nnx': xyzt_filedb_file_dims[0],\n",
-    "#     'nny': xyzt_filedb_file_dims[1],\n",
-    "#     'nnz': xyzt_filedb_file_dims[2],\n",
-    "# }\n",
-    "\n",
-    "# # Construct the selection dictionary\n",
-    "# # selection = {\n",
-    "# #     'nnz': slice(k * chunk_sizes['nnz'], (k + 1) * chunk_sizes['nnz']),\n",
-    "# #     'nny': slice(j * chunk_sizes['nny'], (j + 1) * chunk_sizes['nny']),\n",
-    "# #     'nnx': slice(i * chunk_sizes['nnx'], (i + 1) * chunk_sizes['nnx']),\n",
-    "# # }\n",
-    "\n",
-    "# # 512-subcube to manage memory constraints\n",
-    "# data_subcube = data_xr#.isel(selection)\n",
-    "\n",
-    "# # Group 3 velocity components together\n",
-    "# merged_velocity = merge_velocities(data_subcube, chunk_size_base=xyzt_chunk_sizes[0])\n",
-    "\n",
-    "# # Add an extra dimension to the data to match isotropic8192\n",
-    "# for v in ['e','p','t']:\n",
-    "#     merged_velocity[v] = merged_velocity[v].expand_dims({'extra_dim': [1]}).drop_vars('extra_dim')\n",
-    "#     # Put the extra dimension in the back\n",
-    "#     merged_velocity[v] = merged_velocity[v].transpose('nnz', 'nny', 'nnx', 'extra_dim')\n",
-    "\n",
-    "\n",
-    "# # Rename variables\n",
-    "# merged_velocity = merged_velocity.rename({'e': 'energy', 't': 'temperature', 'p': 'pressure'})\n",
-    "\n",
-    "# dataset = merged_velocity\n",
-    "\n",
-    "# # x, y, z = [coord * xyzt_filedb_file_dims[index] + 1 for index, coord in enumerate(coords[:3])]\n",
-    "# # time = coords[3]\n",
-    "# # ranges = [[x, x + xyzt_filedb_file_dims[0] - 1],\n",
-    "# #           [y, y + xyzt_filedb_file_dims[1] - 1],\n",
-    "# #           [z, z + xyzt_filedb_file_dims[2] - 1]]\n",
-    "\n",
-    "\n",
-    "\n",
-    "# # Needed for Mike's getCutout below\n",
-    "# dataset.attrs['dataset_title'] = 'stsabl2048low'\n",
-    "\n",
-    "# variable_data = []\n",
-    "# for zarr_variable in zarr_variables:\n",
-    "#     variable_data.append(dataset[zarr_variable].values)\n",
-    "#     # data_array = dataset[zarr_variable].values\n",
-    "#     # data_array = np.expand_dims(data_array, axis=0)  # Adds time dimension at axis 0\n",
-    "#     # variable_data.append(data_array)"
    ]
   },
   {
