--- a/ceph_data_transfer-directory_store-new_ncar_dataset_TODO.ipynb
+++ b/ceph_data_transfer-directory_store-new_ncar_dataset_TODO.ipynb
@@ -13,30 +13,41 @@
     "\n",
     "1. Skip creating new zarr store\n",
     "\n",
-    "2. Change timestep iteration in the last cell"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6ff9a861",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "t_start = 26"
+    "2. Change timestep iteration in the last cell\n",
+    "\n",
+    "3. Disabled the `mv prev_iter new_iter`"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "6ff9a861",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-01-22T20:44:17.441265Z",
+     "iopub.status.busy": "2025-01-22T20:44:17.440646Z",
+     "iopub.status.idle": "2025-01-22T20:44:17.447138Z",
+     "shell.execute_reply": "2025-01-22T20:44:17.446487Z",
+     "shell.execute_reply.started": "2025-01-22T20:44:17.441201Z"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "t_start = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "0ce2a96b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-23T14:32:56.867686Z",
-     "iopub.status.busy": "2024-12-23T14:32:56.866966Z",
-     "iopub.status.idle": "2024-12-23T14:32:56.888287Z",
-     "shell.execute_reply": "2024-12-23T14:32:56.886548Z",
-     "shell.execute_reply.started": "2024-12-23T14:32:56.867560Z"
+     "iopub.execute_input": "2025-01-22T20:44:17.533817Z",
+     "iopub.status.busy": "2025-01-22T20:44:17.533668Z",
+     "iopub.status.idle": "2025-01-22T20:44:17.537874Z",
+     "shell.execute_reply": "2025-01-22T20:44:17.537368Z",
+     "shell.execute_reply.started": "2025-01-22T20:44:17.533804Z"
     },
     "tags": []
    },
@@ -55,15 +66,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "5915ec1e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-23T14:32:59.522720Z",
-     "iopub.status.busy": "2024-12-23T14:32:59.522066Z",
-     "iopub.status.idle": "2024-12-23T14:32:59.532531Z",
-     "shell.execute_reply": "2024-12-23T14:32:59.530943Z",
-     "shell.execute_reply.started": "2024-12-23T14:32:59.522673Z"
+     "iopub.execute_input": "2025-01-22T20:44:18.856958Z",
+     "iopub.status.busy": "2025-01-22T20:44:18.856114Z",
+     "iopub.status.idle": "2025-01-22T20:44:18.860118Z",
+     "shell.execute_reply": "2025-01-22T20:44:18.859517Z",
+     "shell.execute_reply.started": "2025-01-22T20:44:18.856937Z"
     },
     "tags": []
    },
@@ -81,9 +92,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "9ebf3c7e",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-01-22T20:44:19.598712Z",
+     "iopub.status.busy": "2025-01-22T20:44:19.598495Z",
+     "iopub.status.idle": "2025-01-22T20:44:19.601379Z",
+     "shell.execute_reply": "2025-01-22T20:44:19.600876Z",
+     "shell.execute_reply.started": "2025-01-22T20:44:19.598699Z"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "DATASET_TO_PROCESS = NCAR_JHF_HR_PATH"
@@ -91,15 +111,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "121c5ce8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-23T14:33:13.549211Z",
-     "iopub.status.busy": "2024-12-23T14:33:13.548601Z",
-     "iopub.status.idle": "2024-12-23T14:33:14.003835Z",
-     "shell.execute_reply": "2024-12-23T14:33:14.002141Z",
-     "shell.execute_reply.started": "2024-12-23T14:33:13.549164Z"
+     "iopub.execute_input": "2025-01-22T20:44:19.993371Z",
+     "iopub.status.busy": "2025-01-22T20:44:19.992927Z",
+     "iopub.status.idle": "2025-01-22T20:44:21.230242Z",
+     "shell.execute_reply": "2025-01-22T20:44:21.229588Z",
+     "shell.execute_reply.started": "2025-01-22T20:44:19.993339Z"
     },
     "tags": []
    },
@@ -125,15 +145,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "5ac46e68-bb3c-4b1b-a0e2-96b6dcd0c25c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-23T14:33:14.878026Z",
-     "iopub.status.busy": "2024-12-23T14:33:14.877087Z",
-     "iopub.status.idle": "2024-12-23T14:33:14.888631Z",
-     "shell.execute_reply": "2024-12-23T14:33:14.886847Z",
-     "shell.execute_reply.started": "2024-12-23T14:33:14.877981Z"
+     "iopub.execute_input": "2025-01-22T20:44:22.101994Z",
+     "iopub.status.busy": "2025-01-22T20:44:22.101174Z",
+     "iopub.status.idle": "2025-01-22T20:44:22.105426Z",
+     "shell.execute_reply": "2025-01-22T20:44:22.104707Z",
+     "shell.execute_reply.started": "2025-01-22T20:44:22.101975Z"
     },
     "tags": []
    },
@@ -149,9 +169,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "88e9232f",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-01-22T20:44:23.119237Z",
+     "iopub.status.busy": "2025-01-22T20:44:23.118955Z",
+     "iopub.status.idle": "2025-01-22T20:44:23.122537Z",
+     "shell.execute_reply": "2025-01-22T20:44:23.121971Z",
+     "shell.execute_reply.started": "2025-01-22T20:44:23.119221Z"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -170,15 +199,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "66cf3164-8b96-4a08-9274-38f9f4e97c25",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-23T14:33:20.697819Z",
-     "iopub.status.busy": "2024-12-23T14:33:20.697171Z",
-     "iopub.status.idle": "2024-12-23T14:33:20.706681Z",
-     "shell.execute_reply": "2024-12-23T14:33:20.705006Z",
-     "shell.execute_reply.started": "2024-12-23T14:33:20.697773Z"
+     "iopub.execute_input": "2025-01-22T20:44:23.521600Z",
+     "iopub.status.busy": "2025-01-22T20:44:23.520976Z",
+     "iopub.status.idle": "2025-01-22T20:44:23.524560Z",
+     "shell.execute_reply": "2025-01-22T20:44:23.524085Z",
+     "shell.execute_reply.started": "2025-01-22T20:44:23.521582Z"
     },
     "tags": []
    },
@@ -192,15 +221,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "bbeac63a-3f15-4860-972a-495253a457ca",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-23T14:33:55.882511Z",
-     "iopub.status.busy": "2024-12-23T14:33:55.881859Z",
-     "iopub.status.idle": "2024-12-23T14:33:55.895574Z",
-     "shell.execute_reply": "2024-12-23T14:33:55.893713Z",
-     "shell.execute_reply.started": "2024-12-23T14:33:55.882464Z"
+     "iopub.execute_input": "2025-01-22T20:44:28.643472Z",
+     "iopub.status.busy": "2025-01-22T20:44:28.643175Z",
+     "iopub.status.idle": "2025-01-22T20:44:28.647447Z",
+     "shell.execute_reply": "2025-01-22T20:44:28.647093Z",
+     "shell.execute_reply.started": "2025-01-22T20:44:28.643455Z"
     },
     "tags": []
    },
@@ -225,7 +254,7 @@
     "    'velocity': 3,\n",
     "    'pressure': 1,\n",
     "    'temperature': 1,\n",
-    "    'energy': 1\n",
+    "    'sgsenergy': 1\n",
     "}\n",
     "zarr_variables = list(zarr_groups.keys())\n",
     "num_variables = len(zarr_variables)"
@@ -233,9 +262,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "b615dac9",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-01-22T20:44:35.048263Z",
+     "iopub.status.busy": "2025-01-22T20:44:35.047946Z",
+     "iopub.status.idle": "2025-01-22T20:44:35.051324Z",
+     "shell.execute_reply": "2025-01-22T20:44:35.050824Z",
+     "shell.execute_reply.started": "2025-01-22T20:44:35.048248Z"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -244,7 +282,7 @@
     "\n",
     "# number of workers to read in parallel.\n",
     "# Keep this under 4, this reads 50GB per worker per worker\n",
-    "num_workers = 3\n",
+    "num_workers = 5\n",
     "# maximum number of retries in case of an error.\n",
     "max_retries = 4\n",
     "# output path for writing the report text file.\n",
@@ -261,82 +299,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "44d825bc-3916-4f37-bf0e-1a648dafaaf7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-23T14:34:06.610201Z",
-     "iopub.status.busy": "2024-12-23T14:34:06.609544Z",
-     "iopub.status.idle": "2024-12-23T14:34:06.874501Z",
-     "shell.execute_reply": "2024-12-23T14:34:06.872066Z",
-     "shell.execute_reply.started": "2024-12-23T14:34:06.610137Z"
+     "iopub.execute_input": "2025-01-13T17:09:47.108497Z",
+     "iopub.status.busy": "2025-01-13T17:09:47.108349Z",
+     "iopub.status.idle": "2025-01-13T17:09:47.110723Z",
+     "shell.execute_reply": "2025-01-13T17:09:47.110287Z",
+     "shell.execute_reply.started": "2025-01-13T17:09:47.108483Z"
     },
     "tags": []
    },
    "outputs": [],
    "source": [
-    "!mv /home/idies/workspace/turbulence-ceph-staging/sciserver-turbulence/stsabl2048high /home/idies/workspace/turbulence-ceph-staging/sciserver-turbulence/stsabl2048high_OLD9"
+    "# !mv /home/idies/workspace/turbulence-ceph-staging/sciserver-turbulence/stsabl2048high /home/idies/workspace/turbulence-ceph-staging/sciserver-turbulence/stsabl2048high_OLD9"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "1018e21f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-23T14:34:12.138928Z",
-     "iopub.status.busy": "2024-12-23T14:34:12.138272Z",
-     "iopub.status.idle": "2024-12-23T14:34:27.394132Z",
-     "shell.execute_reply": "2024-12-23T14:34:27.391717Z",
-     "shell.execute_reply.started": "2024-12-23T14:34:12.138867Z"
+     "iopub.execute_input": "2025-01-13T17:09:47.112327Z",
+     "iopub.status.busy": "2025-01-13T17:09:47.111994Z",
+     "iopub.status.idle": "2025-01-13T17:09:47.117025Z",
+     "shell.execute_reply": "2025-01-13T17:09:47.116579Z",
+     "shell.execute_reply.started": "2025-01-13T17:09:47.112311Z"
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "zarr store created.\n",
-      "-\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\"\"\"\n",
-    "create the zarr store\n",
-    "\"\"\"\n",
-    "def create_zarr_store(store, xyzt_dims_full, xyzt_chunk_sizes, zarr_groups):\n",
-    "    dt = np.dtype(np.float32)\n",
-    "    dt = dt.newbyteorder('<')\n",
+    "# \"\"\"\n",
+    "# create the zarr store\n",
+    "# \"\"\"\n",
+    "# def create_zarr_store(store, xyzt_dims_full, xyzt_chunk_sizes, zarr_groups):\n",
+    "#     dt = np.dtype(np.float32)\n",
+    "#     dt = dt.newbyteorder('<')\n",
     "\n",
-    "    # create the zarr store.\n",
-    "    root = zarr.group(store = store, overwrite = True, synchronizer = None)\n",
+    "#     # create the zarr store.\n",
+    "#     root = zarr.group(store = store, overwrite = True, synchronizer = None)\n",
     "\n",
-    "    # create the zarr group for each variable.\n",
-    "    for variable_name in zarr_groups:\n",
-    "        zarr_dims = zarr_groups[variable_name]\n",
+    "#     # create the zarr group for each variable.\n",
+    "#     for variable_name in zarr_groups:\n",
+    "#         zarr_dims = zarr_groups[variable_name]\n",
     "\n",
-    "        zarr_group = root.zeros(variable_name, shape = (xyzt_dims_full[3], xyzt_dims_full[2], xyzt_dims_full[1], xyzt_dims_full[0], zarr_dims),\n",
-    "                                chunks = (xyzt_chunk_sizes[3], xyzt_chunk_sizes[2], xyzt_chunk_sizes[1], xyzt_chunk_sizes[0], zarr_dims),\n",
-    "                                dtype = dt, compressor = None)\n",
+    "#         zarr_group = root.zeros(variable_name, shape = (xyzt_dims_full[3], xyzt_dims_full[2], xyzt_dims_full[1], xyzt_dims_full[0], zarr_dims),\n",
+    "#                                 chunks = (xyzt_chunk_sizes[3], xyzt_chunk_sizes[2], xyzt_chunk_sizes[1], xyzt_chunk_sizes[0], zarr_dims),\n",
+    "#                                 dtype = dt, compressor = None)\n",
     "\n",
-    "    print('zarr store created.')\n",
-    "    print('-')\n",
-    "    sys.stdout.flush()\n",
+    "#     print('zarr store created.')\n",
+    "#     print('-')\n",
+    "#     sys.stdout.flush()\n",
     "\n",
     "\n",
-    "def confirm_overwrite():\n",
-    "    while True:\n",
-    "        response = input(\"Are you sure you want to overwrite everything? (y/n): \").strip().lower()\n",
-    "        if response in ('y', 'n'):\n",
-    "            return response == 'y'  # Returns True for 'y', False for 'n'\n",
-    "        print(\"Invalid input. Please enter 'y' or 'n'.\")\n",
+    "# def confirm_overwrite():\n",
+    "#     while True:\n",
+    "#         response = input(\"Are you sure you want to overwrite everything? (y/n): \").strip().lower()\n",
+    "#         if response in ('y', 'n'):\n",
+    "#             return response == 'y'  # Returns True for 'y', False for 'n'\n",
+    "#         print(\"Invalid input. Please enter 'y' or 'n'.\")\n",
     "\n",
-    "# if confirm_overwrite():\n",
-    "#     create_zarr_store(store, xyzt_dims_full, xyzt_chunk_sizes, zarr_groups)\n",
-    "# else:\n",
-    "#     print(\"Operation canceled.\")"
+    "# # if confirm_overwrite():\n",
+    "# #     create_zarr_store(store, xyzt_dims_full, xyzt_chunk_sizes, zarr_groups)\n",
+    "# # else:\n",
+    "# #     print(\"Operation canceled.\")"
    ]
   },
   {
@@ -345,11 +374,11 @@
    "id": "a2b0e62f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-23T14:34:50.908211Z",
-     "iopub.status.busy": "2024-12-23T14:34:50.907515Z",
-     "iopub.status.idle": "2024-12-23T14:34:51.638287Z",
-     "shell.execute_reply": "2024-12-23T14:34:51.636545Z",
-     "shell.execute_reply.started": "2024-12-23T14:34:50.908162Z"
+     "iopub.execute_input": "2025-01-22T20:44:41.815861Z",
+     "iopub.status.busy": "2025-01-22T20:44:41.815576Z",
+     "iopub.status.idle": "2025-01-22T20:44:41.878949Z",
+     "shell.execute_reply": "2025-01-22T20:44:41.878487Z",
+     "shell.execute_reply.started": "2025-01-22T20:44:41.815845Z"
     },
     "tags": []
    },
@@ -406,17 +435,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "569a2591d1ef2003",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-01-22T20:45:15.180909Z",
+     "iopub.status.busy": "2025-01-22T20:45:15.180664Z",
+     "iopub.status.idle": "2025-01-22T20:45:15.286892Z",
+     "shell.execute_reply": "2025-01-22T20:45:15.286492Z",
+     "shell.execute_reply.started": "2025-01-22T20:45:15.180895Z"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "\"\"\"\n",
     "read JHTDB datasets from fileDB using giverny and then write to a zarr store on ceph\n",
     "\"\"\"\n",
     "\n",
-    "# open the zarr store using DirectoryStore.\n",
-    "root = zarr.open(store, mode = 'a')\n",
+    "# open the zarr store using DirectoryStore in read-only mode, to verify\n",
+    "root = zarr.open(store, mode = 'r')\n",
+    "\n",
+    "# # append mode to edit\n",
+    "# root = zarr.open(store, mode = 'a')\n",
     "\n",
     "def process_cube(coords):\n",
     "    try:\n",
@@ -476,7 +517,7 @@
     "\n",
     "\n",
     "        # Rename variables\n",
-    "        merged_velocity = merged_velocity.rename({'e': 'energy', 't': 'temperature', 'p': 'pressure'})\n",
+    "        merged_velocity = merged_velocity.rename({'e': 'sgsenergy', 't': 'temperature', 'p': 'pressure'})\n",
     "\n",
     "        dataset = merged_velocity\n",
     "\n",
@@ -496,11 +537,11 @@
     "        x, y, z = [coord * xyzt_filedb_file_dims[index] + 1 for index, coord in enumerate(coords[:3])]\n",
     "        time = timestep\n",
     "\n",
-    "        def save_store(giverny_cube, variable_name):\n",
-    "            root[variable_name][time + time_ceph_offset,\n",
-    "                                z - 1 : z + xyzt_filedb_file_dims[2] - 1,\n",
-    "                                y - 1 : y + xyzt_filedb_file_dims[1] - 1,\n",
-    "                                x - 1 : x + xyzt_filedb_file_dims[0] - 1, :] = giverny_cube\n",
+    "        # def save_store(giverny_cube, variable_name):\n",
+    "        #     root[variable_name][time + time_ceph_offset,\n",
+    "        #                         z - 1 : z + xyzt_filedb_file_dims[2] - 1,\n",
+    "        #                         y - 1 : y + xyzt_filedb_file_dims[1] - 1,\n",
+    "        #                         x - 1 : x + xyzt_filedb_file_dims[0] - 1, :] = giverny_cube\n",
     "\n",
     "        def verify_copy(giverny_cube, variable_name):\n",
     "            ceph_cube = root[variable_name][time + time_ceph_offset,\n",
@@ -513,9 +554,9 @@
     "            else:\n",
     "                return \"corrupt copy\"\n",
     "\n",
-    "        # Save the variables in parallel.\n",
-    "        with ThreadPoolExecutor(num_variables) as p:\n",
-    "            list(p.map(save_store, variable_data, zarr_variables))\n",
+    "        # # Save the variables in parallel.\n",
+    "        # with ThreadPoolExecutor(num_variables) as p:\n",
+    "        #     list(p.map(save_store, variable_data, zarr_variables))\n",
     "\n",
     "\n",
     "        # Verify that the copies are not corrupt.\n",
@@ -536,8 +577,43 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "053fedf2",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-01-22T20:45:28.015439Z",
+     "iopub.status.busy": "2025-01-22T20:45:28.015117Z"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "34bc1c6792084bd9b041b0d1fc5fdb78",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "chunks completed:   0%|          | 0/64 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "135441bfe1e94530b9859c7c6f78fdba",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "time:   0%|          | 0/105 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "Call process_cubes on the collection of 512^3 subchunks\n",
@@ -629,19 +705,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "654d49c9e1bd7be6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!rm -rf /home/idies/workspace/turbulence-ceph-staging/sciserver-turbulence/stsabl2048high_OLD\n",
-    "!rm -rf /home/idies/workspace/turbulence-ceph-staging/sciserver-turbulence/stsabl2048high_OLD2\n",
-    "!rm -rf /home/idies/workspace/turbulence-ceph-staging/sciserver-turbulence/stsabl2048high_OLD3\n",
-    "!rm -rf /home/idies/workspace/turbulence-ceph-staging/sciserver-turbulence/stsabl2048high_OLD4"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "d00a55ea-1c9d-479e-a792-e98a241b0356",
    "metadata": {},
    "outputs": [],
@@ -650,9 +713,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "zarr3.11",
+   "display_name": "Python 3.9 (py39)",
    "language": "python",
-   "name": "python3"
+   "name": "py39"
   },
   "language_info": {
    "codemirror_mode": {
@@ -664,7 +727,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
