fix dumb error where root was undefined for write mode

--- a/ceph_data_transfer-directory_store-new_ncar_dataset_TODO.ipynb
+++ b/ceph_data_transfer-directory_store-new_ncar_dataset_TODO.ipynb
@@ -16,11 +16,11 @@
    "id": "6ff9a861",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T17:33:33.353373Z",
-     "iopub.status.busy": "2025-02-03T17:33:33.353175Z",
-     "iopub.status.idle": "2025-02-03T17:33:33.364974Z",
-     "shell.execute_reply": "2025-02-03T17:33:33.364216Z",
-     "shell.execute_reply.started": "2025-02-03T17:33:33.353324Z"
+     "iopub.execute_input": "2025-02-03T19:22:23.813325Z",
+     "iopub.status.busy": "2025-02-03T19:22:23.813171Z",
+     "iopub.status.idle": "2025-02-03T19:22:23.819890Z",
+     "shell.execute_reply": "2025-02-03T19:22:23.819258Z",
+     "shell.execute_reply.started": "2025-02-03T19:22:23.813290Z"
     },
     "tags": []
    },
@@ -58,11 +58,11 @@
    "id": "c1e5d80f-ad81-4722-9679-13456e8d6e23",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T17:33:33.366623Z",
-     "iopub.status.busy": "2025-02-03T17:33:33.366233Z",
-     "iopub.status.idle": "2025-02-03T17:33:35.410535Z",
-     "shell.execute_reply": "2025-02-03T17:33:35.410067Z",
-     "shell.execute_reply.started": "2025-02-03T17:33:33.366605Z"
+     "iopub.execute_input": "2025-02-03T19:22:23.821311Z",
+     "iopub.status.busy": "2025-02-03T19:22:23.820968Z",
+     "iopub.status.idle": "2025-02-03T19:22:27.122043Z",
+     "shell.execute_reply": "2025-02-03T19:22:27.121534Z",
+     "shell.execute_reply.started": "2025-02-03T19:22:23.821297Z"
     },
     "tags": []
    },
@@ -103,11 +103,11 @@
    "id": "0ce2a96b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T17:33:35.411143Z",
-     "iopub.status.busy": "2025-02-03T17:33:35.411010Z",
-     "iopub.status.idle": "2025-02-03T17:33:35.415107Z",
-     "shell.execute_reply": "2025-02-03T17:33:35.414730Z",
-     "shell.execute_reply.started": "2025-02-03T17:33:35.411129Z"
+     "iopub.execute_input": "2025-02-03T19:22:27.122800Z",
+     "iopub.status.busy": "2025-02-03T19:22:27.122659Z",
+     "iopub.status.idle": "2025-02-03T19:22:27.126993Z",
+     "shell.execute_reply": "2025-02-03T19:22:27.126506Z",
+     "shell.execute_reply.started": "2025-02-03T19:22:27.122787Z"
     },
     "tags": []
    },
@@ -130,11 +130,11 @@
    "id": "9ebf3c7e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T17:33:35.415748Z",
-     "iopub.status.busy": "2025-02-03T17:33:35.415620Z",
-     "iopub.status.idle": "2025-02-03T17:33:35.419132Z",
-     "shell.execute_reply": "2025-02-03T17:33:35.418766Z",
-     "shell.execute_reply.started": "2025-02-03T17:33:35.415735Z"
+     "iopub.execute_input": "2025-02-03T19:22:27.127695Z",
+     "iopub.status.busy": "2025-02-03T19:22:27.127562Z",
+     "iopub.status.idle": "2025-02-03T19:22:27.131129Z",
+     "shell.execute_reply": "2025-02-03T19:22:27.130695Z",
+     "shell.execute_reply.started": "2025-02-03T19:22:27.127682Z"
     },
     "tags": []
    },
@@ -172,11 +172,11 @@
    "id": "121c5ce8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T17:33:35.420360Z",
-     "iopub.status.busy": "2025-02-03T17:33:35.420221Z",
-     "iopub.status.idle": "2025-02-03T17:33:36.645483Z",
-     "shell.execute_reply": "2025-02-03T17:33:36.644917Z",
-     "shell.execute_reply.started": "2025-02-03T17:33:35.420337Z"
+     "iopub.execute_input": "2025-02-03T19:22:27.131827Z",
+     "iopub.status.busy": "2025-02-03T19:22:27.131698Z",
+     "iopub.status.idle": "2025-02-03T19:22:28.340282Z",
+     "shell.execute_reply": "2025-02-03T19:22:28.339646Z",
+     "shell.execute_reply.started": "2025-02-03T19:22:27.131815Z"
     },
     "tags": []
    },
@@ -206,11 +206,11 @@
    "id": "5ac46e68-bb3c-4b1b-a0e2-96b6dcd0c25c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T17:33:36.646636Z",
-     "iopub.status.busy": "2025-02-03T17:33:36.646233Z",
-     "iopub.status.idle": "2025-02-03T17:33:36.649630Z",
-     "shell.execute_reply": "2025-02-03T17:33:36.649182Z",
-     "shell.execute_reply.started": "2025-02-03T17:33:36.646619Z"
+     "iopub.execute_input": "2025-02-03T19:22:28.341587Z",
+     "iopub.status.busy": "2025-02-03T19:22:28.341129Z",
+     "iopub.status.idle": "2025-02-03T19:22:28.344562Z",
+     "shell.execute_reply": "2025-02-03T19:22:28.344009Z",
+     "shell.execute_reply.started": "2025-02-03T19:22:28.341571Z"
     },
     "tags": []
    },
@@ -229,11 +229,11 @@
    "id": "66cf3164-8b96-4a08-9274-38f9f4e97c25",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T17:33:36.650252Z",
-     "iopub.status.busy": "2025-02-03T17:33:36.650116Z",
-     "iopub.status.idle": "2025-02-03T17:33:36.652634Z",
-     "shell.execute_reply": "2025-02-03T17:33:36.652298Z",
-     "shell.execute_reply.started": "2025-02-03T17:33:36.650239Z"
+     "iopub.execute_input": "2025-02-03T19:22:28.346496Z",
+     "iopub.status.busy": "2025-02-03T19:22:28.346120Z",
+     "iopub.status.idle": "2025-02-03T19:22:28.348907Z",
+     "shell.execute_reply": "2025-02-03T19:22:28.348443Z",
+     "shell.execute_reply.started": "2025-02-03T19:22:28.346482Z"
     },
     "tags": []
    },
@@ -251,11 +251,11 @@
    "id": "88e9232f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T17:33:36.653229Z",
-     "iopub.status.busy": "2025-02-03T17:33:36.653097Z",
-     "iopub.status.idle": "2025-02-03T17:33:36.655568Z",
-     "shell.execute_reply": "2025-02-03T17:33:36.655232Z",
-     "shell.execute_reply.started": "2025-02-03T17:33:36.653216Z"
+     "iopub.execute_input": "2025-02-03T19:22:28.349783Z",
+     "iopub.status.busy": "2025-02-03T19:22:28.349480Z",
+     "iopub.status.idle": "2025-02-03T19:22:28.352279Z",
+     "shell.execute_reply": "2025-02-03T19:22:28.351849Z",
+     "shell.execute_reply.started": "2025-02-03T19:22:28.349769Z"
     },
     "tags": []
    },
@@ -281,11 +281,11 @@
    "id": "bbeac63a-3f15-4860-972a-495253a457ca",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T17:33:36.656159Z",
-     "iopub.status.busy": "2025-02-03T17:33:36.656028Z",
-     "iopub.status.idle": "2025-02-03T17:33:36.659566Z",
-     "shell.execute_reply": "2025-02-03T17:33:36.659186Z",
-     "shell.execute_reply.started": "2025-02-03T17:33:36.656147Z"
+     "iopub.execute_input": "2025-02-03T19:22:28.353181Z",
+     "iopub.status.busy": "2025-02-03T19:22:28.352861Z",
+     "iopub.status.idle": "2025-02-03T19:22:28.356414Z",
+     "shell.execute_reply": "2025-02-03T19:22:28.355927Z",
+     "shell.execute_reply.started": "2025-02-03T19:22:28.353167Z"
     },
     "tags": []
    },
@@ -322,11 +322,11 @@
    "id": "b615dac9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T17:33:36.660194Z",
-     "iopub.status.busy": "2025-02-03T17:33:36.660062Z",
-     "iopub.status.idle": "2025-02-03T17:33:36.662472Z",
-     "shell.execute_reply": "2025-02-03T17:33:36.662132Z",
-     "shell.execute_reply.started": "2025-02-03T17:33:36.660181Z"
+     "iopub.execute_input": "2025-02-03T19:22:28.357337Z",
+     "iopub.status.busy": "2025-02-03T19:22:28.357033Z",
+     "iopub.status.idle": "2025-02-03T19:22:28.359469Z",
+     "shell.execute_reply": "2025-02-03T19:22:28.359000Z",
+     "shell.execute_reply.started": "2025-02-03T19:22:28.357323Z"
     },
     "tags": []
    },
@@ -353,11 +353,11 @@
    "id": "44d825bc-3916-4f37-bf0e-1a648dafaaf7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T17:33:36.663061Z",
-     "iopub.status.busy": "2025-02-03T17:33:36.662931Z",
-     "iopub.status.idle": "2025-02-03T17:33:36.665129Z",
-     "shell.execute_reply": "2025-02-03T17:33:36.664804Z",
-     "shell.execute_reply.started": "2025-02-03T17:33:36.663048Z"
+     "iopub.execute_input": "2025-02-03T19:22:28.360354Z",
+     "iopub.status.busy": "2025-02-03T19:22:28.360029Z",
+     "iopub.status.idle": "2025-02-03T19:22:28.362388Z",
+     "shell.execute_reply": "2025-02-03T19:22:28.361950Z",
+     "shell.execute_reply.started": "2025-02-03T19:22:28.360332Z"
     },
     "tags": []
    },
@@ -372,11 +372,11 @@
    "id": "1018e21f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T17:33:36.665721Z",
-     "iopub.status.busy": "2025-02-03T17:33:36.665591Z",
-     "iopub.status.idle": "2025-02-03T17:33:36.668254Z",
-     "shell.execute_reply": "2025-02-03T17:33:36.667932Z",
-     "shell.execute_reply.started": "2025-02-03T17:33:36.665709Z"
+     "iopub.execute_input": "2025-02-03T19:22:28.363242Z",
+     "iopub.status.busy": "2025-02-03T19:22:28.362945Z",
+     "iopub.status.idle": "2025-02-03T19:22:28.365744Z",
+     "shell.execute_reply": "2025-02-03T19:22:28.365329Z",
+     "shell.execute_reply.started": "2025-02-03T19:22:28.363228Z"
     },
     "tags": []
    },
@@ -434,11 +434,11 @@
    "id": "a2b0e62f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T17:33:36.669143Z",
-     "iopub.status.busy": "2025-02-03T17:33:36.669011Z",
-     "iopub.status.idle": "2025-02-03T17:33:36.729665Z",
-     "shell.execute_reply": "2025-02-03T17:33:36.729051Z",
-     "shell.execute_reply.started": "2025-02-03T17:33:36.669131Z"
+     "iopub.execute_input": "2025-02-03T19:22:28.366523Z",
+     "iopub.status.busy": "2025-02-03T19:22:28.366295Z",
+     "iopub.status.idle": "2025-02-03T19:22:28.426733Z",
+     "shell.execute_reply": "2025-02-03T19:22:28.426233Z",
+     "shell.execute_reply.started": "2025-02-03T19:22:28.366510Z"
     },
     "tags": []
    },
@@ -487,15 +487,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "569a2591d1ef2003",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T17:33:54.024462Z",
-     "iopub.status.busy": "2025-02-03T17:33:54.024211Z",
-     "iopub.status.idle": "2025-02-03T17:33:54.036108Z",
-     "shell.execute_reply": "2025-02-03T17:33:54.035753Z",
-     "shell.execute_reply.started": "2025-02-03T17:33:54.024447Z"
+     "iopub.execute_input": "2025-02-03T19:22:28.427595Z",
+     "iopub.status.busy": "2025-02-03T19:22:28.427451Z",
+     "iopub.status.idle": "2025-02-03T19:22:28.496349Z",
+     "shell.execute_reply": "2025-02-03T19:22:28.495877Z",
+     "shell.execute_reply.started": "2025-02-03T19:22:28.427582Z"
     },
     "tags": []
    },
@@ -508,7 +508,7 @@
     "if mode == \"verify\":\n",
     "    # open the zarr store using DirectoryStore in read-only mode, to verify\n",
     "    root = zarr.open(store, mode = 'r')\n",
-    "elif mode == \"rewrite\":\n",
+    "elif mode == \"write\":\n",
     "    # append mode to edit\n",
     "    root = zarr.open(store, mode = 'a')\n",
     "\n",
@@ -645,8 +645,8 @@
    "id": "053fedf2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T17:33:56.667198Z",
-     "iopub.status.busy": "2025-02-03T17:33:56.667035Z"
+     "iopub.execute_input": "2025-02-03T19:22:28.497298Z",
+     "iopub.status.busy": "2025-02-03T19:22:28.496988Z"
     },
     "tags": []
    },
@@ -654,7 +654,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4f7024aaa112488e82c9ccfa50f3d315",
+       "model_id": "5c988bda95b4473da4bc0f83bb13ff38",
        "version_major": 2,
        "version_minor": 0
       },
@@ -668,7 +668,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f8408b83ce894972801c4013e588ac3a",
+       "model_id": "7b16fe019c604ad8be45b33948bb8397",
        "version_major": 2,
        "version_minor": 0
       },
